grammar.js
    source_file: ($) =>
      seq(repeat($._statement_delimeter), repeat($._statement)),

    _statement: ($) => seq($.statement, repeat1($._statement_delimeter)),

    _statement_delimeter: ($) => choice(";", $._newline),

    line_comment: ($) => token(seq("//", /[^\n]*/)),

    _switch_body: ($) =>
      seq(repeat($._statement), $.statement),

    expression_statement: ($) => $.expression,

    switch_expression: ($) =>
      seq(
        "switch",
        $.expression,
        "{",
        repeat(seq($.switch_match, repeat($._statement_delimeter))),
        "}",
      ),

    switch_match: ($) =>
      prec.dynamic(
        -1,
        seq(
          "|",
          field("pattern", choice($.variant_spread_pattern, $._pattern)),
          optional($.guard),
          "=>",
          field(
            "body",
            alias($._switch_body, $.sequence_expression),
          ),
        ),
      ),

    pipe_expression: ($) =>
      prec.left(
        seq(
          choice($.primary_expression, $.block),
          choice("->", "|>"),
          choice($.primary_expression, $.block),
        ),
      ),

    _pattern: ($) =>
      prec.dynamic(
        -1,
        seq(
          choice(
            $.value_identifier,
            $._literal_pattern,
            $._destructuring_pattern,
            $.polyvar_type_pattern,
            $.unit,
            $.module_pack,
            $.lazy_pattern,
            $.parenthesized_pattern,
            $.or_pattern,
            $.range_pattern,
            $.exception_pattern,
          ),
          optional($.as_aliasing),
        ),
      ),

    value_identifier: ($) =>
      choice(
        /[a-z_][a-zA-Z0-9_']*/,
        $._reserved_identifier,
        $._escape_identifier,
      ),

    _escape_identifier: ($) => token(seq('\\"', /[^"]+/, '"')),

    number: ($) => {
      // OCaml: https://github.com/tree-sitter/tree-sitter-ocaml/blob/f1106bf834703f1f2f795da1a3b5f8f40174ffcc/ocaml/grammar.js#L26
      const hex_literal = seq(
        optional(choice("-", "+")),
        /0[xX][0-9A-Fa-f][0-9A-Fa-f_]*(\.[0-9A-Fa-f_]*)?([pP][+\-]?[0-9][0-9_]*)?[g-zG-Z]?/,
      );

      const decimal_digits = /\d(_?\d)*/;
      const signed_integer = seq(optional(choice("-", "+")), decimal_digits);
      const exponent_part = seq(choice("e", "E"), signed_integer);

      const binary_literal = seq(choice("0b", "0B"), /[0-1](_?[0-1])*/);

      const octal_literal = seq(choice("0o", "0O"), /[0-7](_?[0-7])*/);

      const bigint_literal = seq(
        choice(hex_literal, binary_literal, octal_literal, decimal_digits),
        "n",
      );

      const decimal_integer_literal = choice(
        repeat1("0"),
        seq(repeat("0"), /[1-9]/, optional(seq(optional("_"), decimal_digits))),
      );

      const decimal_literal = seq(
        optional(choice("-", "+")),
        choice(
          seq(
            decimal_integer_literal,
            ".",
            optional(decimal_digits),
            optional(exponent_part),
          ),
          seq(".", decimal_digits, optional(exponent_part)),
          seq(decimal_integer_literal, exponent_part),
          decimal_digits,
        ),
      );

      const int_32_64 = seq(
        optional(choice("-", "+")),
        choice(
          decimal_integer_literal,
          binary_literal,
          octal_literal,
          hex_literal,
        ),
        choice("L", "l"),
      );

      return token(
        choice(
          hex_literal,
          decimal_literal,
          binary_literal,
          octal_literal,
          bigint_literal,
          int_32_64,
        ),
      );
    },

    _reserved_identifier: ($) => choice("async", "unpack"),
  },
});

function barSep1(rule) {
  return seq(rule, repeat(seq("|", rule)));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}

function commaSep2(rule) {
  return seq(rule, ",", commaSep1(rule));
}

function commaSep1t(rule) {
  return seq(commaSep1(rule), optional(","));
}

function commaSep2t(rule) {
  return seq(commaSep2(rule), optional(","));
}

function commaSep(rule) {
  return optional(commaSep1(rule));
}

function commaSept(rule) {
  return optional(commaSep1t(rule));
}

function sep1(delimiter, rule) {
  return seq(rule, repeat(seq(delimiter, rule)));
}

function path(prefix, final) {
  return choice(final, seq(prefix, ".", final));
}

function parenthesize(rule) {
  return seq("(", rule, ")");
}
